updated config to use console host

--- a/HelloWorld/HelloWorldClient/app.config
+++ b/HelloWorld/HelloWorldClient/app.config
@@ -23,7 +23,8 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/HostDevServer/HelloWorldService.svc"
+            <!-- <endpoint address="http://localhost:8080/HostDevServer/HelloWorldService.svc"  -->
+            <endpoint address= "http://localhost:8080/HostCmdLineApp/HelloWorldService/"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IHelloWorldService"
                 contract="IHelloWorldService" name="WSHttpBinding_IHelloWorldService">
                 <identity>
