--- a/HelloWorld/HelloWorldClient/app.config
+++ b/HelloWorld/HelloWorldClient/app.config
@@ -24,8 +24,9 @@
         </bindings>
         <client>
             <!-- <endpoint address= "http://localhost:8080/HostCmdLineApp/HelloWorldService/"  -->
-            <!-- <endpoint address= "http://localhost/HelloWorldService/HelloWorldService.svc"  -->
-            <endpoint address="http://localhost:8080/HostDevServer/HelloWorldService.svc"      
+            <!-- <endpoint address="http://localhost:8080/HostDevServer/HelloWorldService.svc" -->
+                
+            <endpoint address= "http://localhost/HelloWorldService/HelloWorldService.svc"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IHelloWorldService"
                 contract="IHelloWorldService" name="WSHttpBinding_IHelloWorldService">
                 <identity>
