--- a/HelloWorld/HostIIS/web.config
+++ b/HelloWorld/HostIIS/web.config
@@ -8,7 +8,7 @@
 <configuration>
 
   <system.web>
-    <compilation debug="false" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0" />
   </system.web>
 
   <system.webServer>
