--- a/Homework1/ZipCodeHost/web.config
+++ b/Homework1/ZipCodeHost/web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <system.web>
-    <compilation debug="false" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
