--- a/Homework1/ZipCodeService/app.config
+++ b/Homework1/ZipCodeService/app.config
@@ -1,3 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ZipCodeService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <applicationSettings>
+        <ZipCodeService.Properties.Settings>
+            <setting name="LOGFILE" serializeAs="String">
+                <value>~/log.txt</value>
+            </setting>
+            <setting name="USERFILE" serializeAs="String">
+                <value>~/users.txt</value>
+            </setting>
+            <setting name="ZIPCODEFILE" serializeAs="String">
+                <value>~/zipcodes.txt</value>
+            </setting>
+        </ZipCodeService.Properties.Settings>
+    </applicationSettings>
 </configuration>
