--- a/RealNorthwind/RealNorthwindService/App.config
+++ b/RealNorthwind/RealNorthwindService/App.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
+  <connectionStrings>
+    <add name ="NorthwindConnectionString"
+    connectionString="server=WHITNER-T-LT2\SQLEXPRESS;database=Northwind;Integrated Security=SSPI" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" />
   </system.web>
@@ -41,7 +46,7 @@
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
