Added 95% solution for hw2.  still needs review & clean-up!

--- a/RealNorthwind/RealNorthwindDAL/RealNorthwindDAL.csproj
+++ b/RealNorthwind/RealNorthwindDAL/RealNorthwindDAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryDAO.cs" />
     <Compile Include="ProductDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
