--- a/RealNorthwind/RealNorthwindLogic/RealNorthwindLogic.csproj
+++ b/RealNorthwind/RealNorthwindLogic/RealNorthwindLogic.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryLogic.cs" />
     <Compile Include="ProductLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
