--- a/RealNorthwind/RealNorthwindService/RealNorthwindService.csproj
+++ b/RealNorthwind/RealNorthwindService/RealNorthwindService.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Category.cs" />
+    <Compile Include="CategoryFault.cs" />
+    <Compile Include="CategoryService.cs" />
+    <Compile Include="ICategoryService.cs" />
     <Compile Include="IProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProductService.cs" />
