--- a/RealNorthwind/RealNorthwindClient/RealNorthwindClient.csproj
+++ b/RealNorthwind/RealNorthwindClient/RealNorthwindClient.csproj
@@ -45,8 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\CategoryServiceRef\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\ProductServiceRef\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -58,6 +64,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\CategoryServiceRef\MyWCFServices.RealNorthwindService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\CategoryServiceRef\RealNorthwindClient.CategoryServiceRef.Category.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\CategoryServiceRef\service.wsdl" />
+    <None Include="Service References\CategoryServiceRef\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\CategoryServiceRef\service1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\ProductServiceRef\MyWCFServices.RealNorthwindService.xsd">
@@ -75,6 +94,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\CategoryServiceRef\" />
     <WCFMetadataStorage Include="Service References\ProductServiceRef\" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +105,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\ProductServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\CategoryServiceRef\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\CategoryServiceRef\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\CategoryServiceRef\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
