--- a/RealNorthwind/RealNorthwindClient/app.config
+++ b/RealNorthwind/RealNorthwindClient/app.config
@@ -20,12 +20,36 @@
                             algorithmSuite="Default" />
                     </security>
                 </binding>
+                <binding name="WSHttpBinding_ICategoryService" closeTimeout="00:01:00"
+                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+                    allowCookies="false">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00"
+                        enabled="false" />
+                    <security mode="Message">
+                        <transport clientCredentialType="Windows" proxyCredentialType="None"
+                            realm="" />
+                        <message clientCredentialType="Windows" negotiateServiceCredential="true"
+                            algorithmSuite="Default" />
+                    </security>
+                </binding>
             </wsHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8080/MyWCFServices/RealNorthwindService/ProductService/"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProductService"
                 contract="ProductServiceRef.IProductService" name="WSHttpBinding_IProductService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8080/MyWCFServices/RealNorthwindService/CategoryService/"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICategoryService"
+                contract="CategoryServiceRef.ICategoryService" name="WSHttpBinding_ICategoryService">
                 <identity>
                     <dns value="localhost" />
                 </identity>
