--- a/RealNorthwind/RealNorthwindService/App.config
+++ b/RealNorthwind/RealNorthwindService/App.config
@@ -3,7 +3,10 @@
 
   <connectionStrings>
     <add name ="NorthwindConnectionString"
-    connectionString="server=WHITNER-T-LT2\SQLEXPRESS;database=Northwind;Integrated Security=SSPI" />
+         connectionString="server=WHITNER-T-LT2\SQLEXPRESS;database=Northwind;Integrated Security=SSPI" />
+    <add name="NorthwindEntities" 
+         connectionString="metadata=res://*/Northwind.csdl|res://*/Northwind.ssdl|res://*/Northwind.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WHITNER-T-LT2\SQLEXPRESS;initial catalog=Northwind;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
 
   <system.web>
